--- a/src/components/home/header/Header.scss
+++ b/src/components/home/header/Header.scss
@@ -7,7 +7,7 @@
         to left bottom,
         rgba(#225901, 100),
         rgba(#04220700, 0.3)), 
-        url(../../../images/Bg.jpg);   
+        url(~../../../images/Bg.jpg);   
     background-size: cover;  /* background cover takes over the width of view port */   
     background-position: top; 
 
