--- a/src/components/contact/footer/Footer.scss
+++ b/src/components/contact/footer/Footer.scss
@@ -7,6 +7,9 @@
 
     &__part1 {
         padding: 10rem;
+        @media only screen and (min-width: 1277px) {
+            padding: 6rem 10rem 2rem 10rem;
+        }
     }
 
     &__part2 {
@@ -15,9 +18,6 @@
         grid-column-gap: 1rem;
         padding: 2rem 4rem;
         border-top: 4px solid #fff;
-        // @media only screen and (min-width: 1500px) {
-        //     padding: 2rem;
-        // }
     }
 
     &__about {
