--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -13,7 +13,11 @@
     @media only screen and (max-width: 900px) {
         grid-template-rows: 40rem 6rem;
     }
-
+    @media only screen and (max-width: 500px) {
+        grid-template-rows: 70rem 6rem;
+        grid-template-columns: 49rem;
+        
+    }
     &__detail {
         text-align: justify;
         padding: 0 0 0 1rem;
@@ -76,6 +80,12 @@
             padding: 0 0 0 2rem;
             
         }
+        @media only screen and (max-width: 500px) {
+            grid-template-columns: repeat(1, 1fr);
+            grid-column-gap: 3rem;
+            padding: 3rem;
+            
+        }
     }
 
     &__part2 {
@@ -94,6 +104,13 @@
 
         @media only screen and (max-width: 1065px) {
             grid-column-gap: 14rem;
+            
+        }
+        @media only screen and (max-width: 500px) {
+            grid-column-gap: 1rem;
+            padding: 0rem;
+            font-size: 1rem;
+            grid-template-columns: 1.5fr 1fr 1fr;
             
         }
 
