--- a/src/components/contact/footer/Footer.scss
+++ b/src/components/contact/footer/Footer.scss
@@ -10,6 +10,9 @@
         @media only screen and (max-width: 1277px) {
             padding: 8rem;
         }
+        @media only screen and (max-width: 500px) {
+            padding: 5rem;
+        }
     }
 
     &__part2 {
@@ -18,6 +21,13 @@
         grid-column-gap: 1rem;
         padding: 2rem 4rem;
         border-top: 4px solid #fff;
+        @media only screen and (max-width: 500px) {
+            grid-column-gap: 1rem;
+            padding: 1rem;
+            font-size: 1rem;
+            grid-template-columns: 1.5fr 1fr 1fr;
+            
+        }
     }
 
     &__about {
