--- a/src/components/about/header/Header.scss
+++ b/src/components/about/header/Header.scss
@@ -15,6 +15,10 @@
         height: 82vh;
         
     }
+    @media only screen and (max-width: 400px) {
+        height: 90vh;
+        
+    }
     // nesting the elements
     /* styling the logo */
     &__section {
@@ -25,6 +29,10 @@
         padding: 0 3rem;
         @media only screen and (max-width: 900px) {
             height: 82vh;
+            
+        }
+        @media only screen and (max-width: 500px) {
+            padding: 0;
             
         }
     }
