--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -18,6 +18,9 @@
         grid-template-columns: 49rem;
         
     }
+    @media only screen and (max-width: 400px) {
+        grid-template-columns: 42rem;
+    }
     &__detail {
         text-align: justify;
         padding: 0 0 0 1rem;
@@ -113,6 +116,14 @@
             grid-template-columns: 1.5fr 1fr 1fr;
             
         }
+        // @media only screen and (max-width: 500px) {
+        //     grid-column-gap: 1rem;
+        //     padding: 1rem;
+        //     font-size: 1rem;
+        //     grid-template-columns: 1.5fr 1fr 1fr;
+            
+        // }
+
 
         &--icons {
             display: flex;
