--- a/src/components/home/header/Header.scss
+++ b/src/components/home/header/Header.scss
@@ -242,6 +242,13 @@
             text-decoration: none;
             color: #fff;
         }
+        @media only screen and (max-width: 400px) {
+            font-size: 1.2rem;
+            font-weight: 500;
+            &:not(:last-child) {
+                margin-bottom: 0.5rem;
+        }
+        }
     }
 }
 
