--- a/src/components/contact/footer/Footer.scss
+++ b/src/components/contact/footer/Footer.scss
@@ -28,6 +28,11 @@
             grid-template-columns: 1.5fr 1fr 1fr;
             
         }
+        @media only screen and (max-width: 400px) {
+            grid-template-columns: auto;
+            grid-template-rows: auto auto;
+            
+        }
     }
 
     &__about {
