--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -116,6 +116,11 @@
             grid-template-columns: 1.5fr 1fr 1fr;
             
         }
+        @media only screen and (max-width: 400px) {
+            grid-template-columns: auto auto;
+            grid-template-rows: auto auto;
+            
+        }
         // @media only screen and (max-width: 500px) {
         //     grid-column-gap: 1rem;
         //     padding: 1rem;
