--- a/src/components/contact/header/Contact.scss
+++ b/src/components/contact/header/Contact.scss
@@ -106,6 +106,7 @@
             }
 
             @media only screen and (max-width: 400px) {
+                margin-top: 6rem;
                 height: 180px;
                 width: 290px;
             }
