--- a/src/index.scss
+++ b/src/index.scss
@@ -124,6 +124,19 @@ html {
             margin-bottom: 2rem;
             margin-right: 0;
         }
+
+        @media only screen and (max-width: 1000px) and (max-height: 412px) {
+            &:not(:last-child) {
+                // creating space btn margins
+                margin-bottom: 23rem;
+            }
+        }
+        @media only screen and (max-width: 1000px) and (max-height: 400px) {
+            &:not(:last-child) {
+                // creating space btn margins
+                margin-bottom: 4rem;
+            }
+        }
         @media only screen and (max-width: 500px) {
             margin-bottom: 2rem;
         }
