--- a/src/components/home/features/Features.scss
+++ b/src/components/home/features/Features.scss
@@ -94,6 +94,22 @@
     width: 638px;
     margin: 10px auto;
     color: #348403;
+    @media only screen and (max-width: 950px) {
+      width: 550px;
+      
+  }
+    @media only screen and (max-width: 800px) and (max-height: 1280px) {
+      width: 450px;
+      
+  }
+    @media only screen and (max-width: 800px)  and (max-height: 360px)  {
+      width: 450px;
+      
+  }
+    @media only screen and (max-width: 700px) {
+      width: 380px;
+      
+  }
 
     @media only screen and (max-width: 500px) {
       padding:10px;
